# auri_v2000

./: .gitignore  README.md  help.txt
catkin_ws/au_core/: CMakeLists.txt
catkin_ws/au_core/include/au_core/: camera_info.h  camera_info.hpp  loader_util.h  loader_util.hpp  math_util.h  math_util.hpp  sigint_handler.h  timeout_guard.h  vision_util.h
catkin_ws/au_core/msg/: DynamicsStability.msg  DynamicsState.msg  MCBaseSpeed.msg  MCDiff.msg
catkin_ws/au_core/src/: camera_info.cpp  loader_util.cpp  math_util.cpp  rolling_stats.cpp  sigint_handler.cpp  timeout_guard.cpp  vision_util.cpp
catkin_ws/au_core/srv/: Detection.srv  Tracking.srv
catkin_ws/au_core/test/: loader_util_tests.cpp  loader_util_tests.py  math_utils_tests.cpp
catkin_ws/au_core/urdf/: auri.urdf
install/: local_setup.sh  setup.sh
install/au_core/share/au_core/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/au_core/: CMakeLists.txt  README.md  package.xml  setup.py
src/au_core/include/au_core/: camera_info.hpp  loader_util.hpp  rolling_stats.hpp  sigint_handler.hpp  vision_util.hpp
src/au_core/launch/: extract_images_bag.launch  record_bag.launch
src/au_core/msg/: Depth.msg  Dvl.msg  KillSig.msg  LedCommand.msg  MCFeedback.msg  MCRaw.msg  MCStatus.msg  Map.msg  MapObject.msg  MotorDisable.msg  PingStatus.msg  Roi.msg  RoiArray.msg  ServoAngle.msg
src/au_core/params/: frames.yaml  scene_objects.yaml  topics.yaml
src/au_core/scripts/: dotcode_generator.py  extract_images_from_bag.py  generate_dotgraph.sh
src/au_core/src/: camera_info.cpp  loader_util.cpp  math_util.cpp  rolling_stats.cpp  sigint_handler.cpp  timeout_guard.cpp
src/au_core/src/au_core_utils/: loader_util.py
src/au_core/srv/: ActuatorCommand.srv  Detection.srv  Tracking.srv
src/au_core/test/: loader_util_tests.cpp  math_utils_tests.cpp  rolling_stats_tests.cpp
