<?xml version="1.0"?>
<package format="3">
  <name>au_core</name>
  <version>0.0.0</version>
  <description>Core Auri tools</description>

  <maintainer email="james@arvp.org">James Hryniw</maintainer>

  <license>TODO</license>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <!--<url type="website">http://wiki.ros.org/au_sensors</url>-->

  <author email="james@arvp.org">James Hryniw</author>

  <!-- <buildtool_depend>catkin</buildtool_depend> -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <!-- <member_of_group>rosidl_interface_packages</member_of_group> -->

  <!-- <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>angles</build_depend> -->

  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>angles</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>rosunit</test_depend>
</package>
